--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1 class="h1_princ">The site</h1>
+    <h1 class="h1_princ">Moje wymarzone wakacje</h1>
   </body>
 <html>
