--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="icon" type="image/x-icon" href="images/cruise-ship-svgrepo-com.svg">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
 <body>
     <div class="header_princ_mobile"></div>
